regen for r10015 (fix a compilation error on Solaris 9), part of #927 - write_verify - automatically detect slient data corruption

--- a/gfarm_v2/branches/2.6/include/gfarm/gfarm_config.h.in
+++ b/gfarm_v2/branches/2.6/include/gfarm/gfarm_config.h.in
@@ -53,6 +53,12 @@
 /* Define to 1 if you have the `fdopendir' function. */
 #undef HAVE_FDOPENDIR
 
+/* Define to 1 if you have the `futimes' function. */
+#undef HAVE_FUTIMES
+
+/* Define to 1 if you have the `futimesat' function. */
+#undef HAVE_FUTIMESAT
+
 /* Define to 1 if you have the `getdents' function. */
 #undef HAVE_GETDENTS
 
