--- a/gftool/config-gfarm/sysdep/default/gfmd.in
+++ b/gftool/config-gfarm/sysdep/default/gfmd.in
@@ -30,6 +30,7 @@ PIDFILE="@config_gfarm_gfmd_pid_file@"
 OPTIONS="@config_gfarm_gfmd_option@"
 warning_facility=local0
 warning_priority=notice
+export GLOBUS_THREAD_MODEL=pthread
 
 case $1 in 
 start|slavestart)
