--- a/gfarm_v2/branches/2.6.dirquota/gftool/gfquota/gfquota/Makefile
+++ b/gfarm_v2/branches/2.6.dirquota/gftool/gfquota/gfquota/Makefile
@@ -18,4 +18,10 @@ include $(top_srcdir)/makes/prog.mk
 ###
 
 $(OBJS): $(DEPGFARMINC) \
-	$(GFARMLIB_SRCDIR)/gfm_client.h
+	$(GFARMLIB_SRCDIR)/gfm_client.h \
+	$(GFARMLIB_SRCDIR)/quota_info.h \
+	$(GFARMLIB_SRCDIR)/gfm_client.h \
+	$(GFARMLIB_SRCDIR)/lookup.h \
+	$(GFARMLIB_SRCDIR)/gfs_dirquota.h \
+	$(GFARMLIB_SRCDIR)/gfarm_path.h
+
