--- a/gfarm_v2/branches/2.7/linux/ugidmapd/Makefile
+++ b/gfarm_v2/branches/2.7/linux/ugidmapd/Makefile
@@ -8,8 +8,8 @@ include $(top_srcdir)/makes/var.mk
 #include $(srcdir)/../Makefile.inc
 
 CFLAGS = $(COMMON_CFLAGS) -I../include -I/usr/local/include
-LDLIBS = -levent
-DEPLIBS = 
+LDLIBS =
+DEPLIBS =
 
 PROGRAM = ug_idmapd
 
