--- a/gfarm_v2/branches/2.7/makes/config.mk.in
+++ b/gfarm_v2/branches/2.7/makes/config.mk.in
@@ -116,6 +116,9 @@ postgresql_objs = @postgresql_objs@
 postgresql_cflags = @postgresql_cflags@
 postgresql_targets = @postgresql_targets@
 
+rdma_includes = @rdma_includes@
+rdma_libs = @rdma_libs@
+
 # build lib/gfs_hook/sysdep/$(gfs_hook_sysdep_subdir)
 gfs_hook_sysdep_subdir = @gfs_hook_sysdep_subdir@
 
