support none backend

--- a/gfarm_v2/branches/2.7/gftool/config-gfarm/Makefile
+++ b/gfarm_v2/branches/2.7/gftool/config-gfarm/Makefile
@@ -19,6 +19,7 @@ BUILT_SCRIPTS = config-gfarm config-gfarm-update config-gfsd \
 DATA =	$(srcdir)/config-gfarm.common \
 	$(srcdir)/config-gfarm.postgresql \
 	$(srcdir)/config-gfarm.ldap \
+	$(srcdir)/config-gfarm.none \
 	$(srcdir)/config-gfarm.iostat \
 	$(srcdir)/config-gfarm-update.postgresql \
 	$(srcdir)/config-gfarm-update.ldap \
@@ -26,6 +27,7 @@ DATA =	$(srcdir)/config-gfarm.common \
 	$(srcdir)/unconfig-gfsd.sh.in \
 	$(srcdir)/gfarm.conf-postgresql.in \
 	$(srcdir)/gfarm.conf-ldap.in \
+	$(srcdir)/gfarm.conf-none.in \
 	$(srcdir)/gfarm.conf.in \
 	$(srcdir)/slapd.conf-2.0.in \
 	$(srcdir)/slapd.conf-2.1.in \
