sequel to r10423 - config-gfarm-update

--- a/gfarm_v2/branches/2.7/gftool/config-gfarm/Makefile
+++ b/gfarm_v2/branches/2.7/gftool/config-gfarm/Makefile
@@ -23,6 +23,7 @@ DATA =	$(srcdir)/config-gfarm.common \
 	$(srcdir)/config-gfarm.iostat \
 	$(srcdir)/config-gfarm-update.postgresql \
 	$(srcdir)/config-gfarm-update.ldap \
+	$(srcdir)/config-gfarm-update.none \
 	$(srcdir)/unconfig-gfarm.sh.in \
 	$(srcdir)/unconfig-gfsd.sh.in \
 	$(srcdir)/gfarm.conf-postgresql.in \
