--- a/gfarm_v2/branches/2.7/include/gfarm/gfarm_config.h.in
+++ b/gfarm_v2/branches/2.7/include/gfarm/gfarm_config.h.in
@@ -285,6 +285,9 @@
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
+/* using sys_nerr causes warning */
+#undef WARNING_SYS_NERR
+
 /* Define WORDS_BIGENDIAN to 1 if your processor stores words with the most
    significant byte first (like Motorola and SPARC, unlike Intel). */
 #if defined AC_APPLE_UNIVERSAL_BUILD
