include gflog.mk to assign log message numbers

--- a/gfarm_v2/branches/2.7/linux/kernel/Makefile.in
+++ b/gfarm_v2/branches/2.7/linux/kernel/Makefile.in
@@ -183,3 +183,12 @@ clean:
 	rm -f $(GFARMDIR)/lib/libgfarm/gfutil/.*.o.*
 
 distclean: clean
+
+top_builddir = $(GFARMDIR)
+top_srcdir = $(top_builddir)
+srcdir = .
+
+SRCS = *.c
+
+include $(top_srcdir)/makes/var.mk
+include $(top_srcdir)/makes/gflog.mk
