implement #1009 - improve concurrency to connect gfmd by using gfevent

--- a/gfarm_v2/branches/ipv6/lib/libgfarm/gfutil/Makefile
+++ b/gfarm_v2/branches/ipv6/lib/libgfarm/gfutil/Makefile
@@ -13,6 +13,7 @@ SRCS =	alloc.c \
 	assert.c \
 	backtrace.c \
 	daemon.c \
+	fdutil.c \
 	gfevent.c \
 	gfnetdb.c \
 	hash.c \
@@ -35,6 +36,7 @@ OBJS =	alloc.lo \
 	assert.lo \
 	backtrace.lo \
 	daemon.lo \
+	fdutil.lo \
 	gfevent.lo \
 	gfnetdb.lo \
 	hash.lo \
@@ -68,14 +70,15 @@ include $(top_srcdir)/makes/gflog.mk
 $(OBJS): $(DEPGFARMINC)
 backtrace.lo: gfutil.h
 daemon.lo: gfutil.h
-gfevent.lo: $(INC_SRCDIR)/gfarm_misc.h gfutil.h gfevent.h
+fdutil.lo: gfutil.h fdutil.h assert.h
+gfevent.lo: $(INC_SRCDIR)/gfarm_misc.h gfutil.h assert.h gfevent.h
 gfnetdb.lo: gfnetdb.h
 id_table.lo: id_table.h
 hash.lo: gfutil.h hash.h
 hash_strptr.lo: hash.h
 limit.lo: gfutil.h
 logutil.lo: gfutil.h gflog_reduced.h
-lru_cache.lo: lru_cache.h
+lru_cache.lo: lru_cache.h assert.h
 msgdigest.lo: msgdigest.h
 nanosec.lo: nanosec.h
 privlock.lo: nanosec.h thrsubr.h gfutil.h
