implement #1011 - gfdf(1) -i option to print number of inodes

--- a/gfarm_v2/branches/2.7/gftool/gfdf/Makefile
+++ b/gfarm_v2/branches/2.7/gftool/gfdf/Makefile
@@ -9,7 +9,8 @@ include $(top_srcdir)/makes/var.mk
 PROGRAM = gfdf
 SRCS = gfdf.c
 OBJS = gfdf.o
-CFLAGS = $(COMMON_CFLAGS) -I$(GFARMLIB_SRCDIR) $(openssl_includes)
+CFLAGS = $(COMMON_CFLAGS) -I$(GFUTIL_SRCDIR) -I$(GFARMLIB_SRCDIR) \
+	$(openssl_includes)
 LDLIBS = $(COMMON_LDLIBS) $(GFARMLIB) $(LIBS)
 DEPLIBS = $(DEPGFARMLIB)
 
@@ -20,5 +21,6 @@ include $(top_srcdir)/makes/prog.mk
 ###
 
 $(OBJS): $(DEPGFARMINC) \
+	$(GFUTIL_SRCDIR)/hash.h \
 	$(GFARMLIB_SRCDIR)/config.h \
 	$(GFARMLIB_SRCDIR)/gfs_client.h
