use PTHREAD_PRIO_INHERIT by default if available, to prevent priority inversion
this is part of fix #1015 - too long giant_lock is observed when both massive number of replications and file removals happen simultaneously

--- a/gfarm_v2/branches/2.7/configure.ac
+++ b/gfarm_v2/branches/2.7/configure.ac
@@ -1112,6 +1112,21 @@ if test "$ax_cv_have_getspnam_r" = yes; then
   AC_DEFINE(HAVE_GETSPNAM_R, 1, [5 arguments getspnam_r() exists])
 fi
 
+### Check whether PTHREAD_PRIO_INHERIT is usable or not
+
+AC_MSG_CHECKING([PTHREAD_PRIO_INHERIT])
+AC_TRY_COMPILE([
+#define _GNU_SOURCE /* CentOS 6 needs this, although CentOS 7 doesn't */
+#include <pthread.h>],[
+pthread_mutexattr_t attr;
+
+pthread_mutexattr_setprotocol(&attr, PTHREAD_PRIO_INHERIT);
+], [ax_cv_have_pthread_prio_inherit=yes], [ax_cv_have_pthread_prio_inherit=no])
+AC_MSG_RESULT([$ax_cv_have_pthread_prio_inherit])
+if test "$ax_cv_have_pthread_prio_inherit" = yes; then
+  AC_DEFINE(HAVE_PTHREAD_PRIO_INHERIT, 1, [PTHREAD_PRIO_INHERIT is usable])
+fi
+
 
 ###### Checks for system services.
 # empty for now
