regen for r10689 re: #1015 - too long giant_lock is observed when both massive number of replications and file removals happen simultaneously

--- a/gfarm_v2/branches/2.6/include/gfarm/gfarm_config.h.in
+++ b/gfarm_v2/branches/2.6/include/gfarm/gfarm_config.h.in
@@ -173,6 +173,9 @@
 /* Define to 1 if you have the `pthread_mutex_timedlock' function. */
 #undef HAVE_PTHREAD_MUTEX_TIMEDLOCK
 
+/* PTHREAD_PRIO_INHERIT is usable */
+#undef HAVE_PTHREAD_PRIO_INHERIT
+
 /* Define to 1 if you have the `pwrite' function. */
 #undef HAVE_PWRITE
 
