implement #1010 - IPv6 support
support for filesystem nodes with multiple IP addresses hasn't been completed
yet, though.  esp. gfhost(1) and lib/libgfarm/gfarm/schedule.c

--- a/gfarm_v2/branches/ipv6/gftool/gfhost/Makefile
+++ b/gfarm_v2/branches/ipv6/gftool/gfhost/Makefile
@@ -22,6 +22,7 @@ include $(top_srcdir)/makes/prog.mk
 $(OBJS): $(DEPGFARMINC) \
 	$(GFUTIL_SRCDIR)/gfevent.h \
 	$(GFARMLIB_SRCDIR)/liberror.h \
+	$(GFARMLIB_SRCDIR)/host_address.h \
 	$(GFARMLIB_SRCDIR)/host.h \
 	$(GFARMLIB_SRCDIR)/auth.h \
 	$(GFARMLIB_SRCDIR)/gfm_client.h \
