--- a/gfarm_v2/branches/ipv6/server/gfmd/Makefile.inc
+++ b/gfarm_v2/branches/ipv6/server/gfmd/Makefile.inc
@@ -83,6 +83,7 @@ DEPGFMDINC = \
 	$(GFARMLIB_SRCDIR)/gfp_xdr.h \
 	$(GFARMLIB_SRCDIR)/io_fd.h \
 	$(GFARMLIB_SRCDIR)/sockopt.h \
+	$(GFARMLIB_SRCDIR)/host_address.h \
 	$(GFARMLIB_SRCDIR)/auth.h \
 	$(GFARMLIB_SRCDIR)/config.h \
 	$(GFARMLIB_SRCDIR)/gfm_proto.h \
