introduce an abstraction about struct event_waiter in gfmd. as a preparation to fix #1046 - gfmd may access freed struct peer, if a client disconnects while waiting for generation update

--- a/gfarm_v2/branches/replica_check_3/server/gfmd/Makefile.inc
+++ b/gfarm_v2/branches/replica_check_3/server/gfmd/Makefile.inc
@@ -121,4 +121,5 @@ DEPGFMDINC = \
 	$(GFMD_SRCDIR)/protocol_state.h \
 	$(GFMD_SRCDIR)/peer.h \
 	$(GFMD_SRCDIR)/back_channel.h \
-	$(GFMD_SRCDIR)/gfmd_channel.h
+	$(GFMD_SRCDIR)/gfmd_channel.h \
+	$(GFMD_SRCDIR)/gfmd.h
